--- a/Task1.html
+++ b/Task1.html
@@ -17,11 +17,11 @@
 <h2>大喇叭小分队</h2>
 <h3>大喇叭小分队</h3>
 <h4>大喇叭小分队</h4>
-<img src="./logo.jpg" width = 300 height = 200 />
+<img src="./lo.jpg" width = 300 height = 200 />
 <br/>
-<img src="./logo.jpg" width = 300 height = 200/>
+<img src="./lo.jpg" width = 300 height = 200/>
 <br/>
-<img src="./logo.jpg" width = 300 height = 200/>
+<img src="./lo.jpg" width = 300 height = 200/>
 <br/>
 <a href="http://www.baidu.com">baidu</a>
 <br/>
@@ -31,10 +31,10 @@
 <br/>
 <br/>
 <div class="picture">
-    <img src="./logo.jpg"/>
+    <img src="./lo.jpg"/>
     <br/>
     <br/>
-    <img src="./logo.jpg"/>
+    <img src="./lo.jpg"/>
 </div>
 <div>
     <table border="1"  bordercolor="#000000"  width="300">
